--- a/Client/src/components/styles/UserPassForm.css
+++ b/Client/src/components/styles/UserPassForm.css
@@ -8,3 +8,14 @@
 .small-text {
     font-size: 11px;
 }
+
+.box1 {
+    width: 50vw; 
+    height: 30vh;  
+    background-color: #333; 
+    border: 1px solid #838383;  
+    padding: 10px;  
+    border-radius: 5px; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+    margin: 10px auto; 
+}
